Dynamic REDIS config

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ SERVER_DEV_PORT=3001
 PUBLIC_STATES="público,privado,eliminado,preparação,importação"
 
 ES_JAVA_OPTS="-Xms16g -Xmx16g"
+
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
