--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.9.0",
     "@stjiris/jurisprudencia-document": "^11.1.4",
+    "@types/string-similarity": "^4.0.2",
     "brace": "^0.11.1",
     "d3": "^7.8.5",
     "d3-path": "^3.1.0",
@@ -32,8 +33,10 @@
     "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.8.0",
+    "recharts": "^2.15.3",
     "redis": "^4.6.14",
     "resize-observer-polyfill": "^1.5.1",
+    "string-similarity": "^4.0.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
@@ -46,6 +49,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-grid-layout": "^1.3.2",
+    "@types/recharts": "^2.0.1",
     "@types/vis": "^4.21.24"
   }
 }
