Analytics Dashboard and Normalization updtes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rss:generate": "node scripts/generate-rss.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.9.0",
@@ -21,6 +22,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "exceljs": "^4.3.0",
+    "feed": "^4.2.2",
     "formidable": "^3.5.0",
     "next": "^13.3.0",
     "react": "18.2.0",
@@ -42,6 +44,8 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/d3-sankey": "^0.12.1",
+    "@types/d3-time": "^3.0.4",
+    "@types/d3-time-format": "^4.0.3",
     "@types/debounce": "^1.2.1",
     "@types/elasticsearch": "^5.0.40",
     "@types/formidable": "^3.4.0",
